routes eetup with antd

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,9 @@
   "plugins": [
   				"react-hot-loader/babel",
   				"transform-runtime",
-  				"transform-class-properties"
+  				"transform-class-properties",
+	  			["import",
+	  			{ "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
+
   			]
 }
