--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
+    "antd": "^3.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -39,12 +42,16 @@
     "express-debug": "^1.1.1",
     "helmet": "^3.10.0",
     "join-io": "^2.0.0",
+    "less": "^3.0.0",
+    "less-loader": "^4.0.5",
+    "less-vars-to-js": "^1.2.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-router": "^3.0.5",
     "response-time": "^2.3.2",
     "session": "^0.1.0",
     "sriracha-admin": "0.0.3",
