hot reloading working with router now

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
   				"transform-runtime",
   				"transform-class-properties",
 	  			["import",
-	  			{ "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
+	  			{ "libraryName": "antd", "libraryDirectory": "es", "style": "true" }]
 
   			]
 }
